	* added bandwidth reports for estimated TCP/IP overhead and DHT
	* includes DHT traffic in the rate limiter
	* added support for bitcomet padding files
	* improved support for sparse files on windows
	* added ability to give seeding torrents preference to active slots

release 0.14.7

	* fixed deadlock in natpmp
	* resume data alerts are always posted, regardless of alert mask

release 0.14.6

	* various missing include fixes to be buildable with boost 1.40
	* added missing functions to python binding related to torrent creation
	* fixed to add filename on web seed urls that lack it
	* fixed BOOST_ASIO_HASH_MAP_BUCKETS define for boost 1.39
	* fixed checking of fast and suggest messages when used with magnet links
	* fixed bug where web seeds would not disconnect if being resolved when
	  the torrent was paused
	* fixed download piece performance bug in piece picker
	* fixed bug in connect candidate counter
	* replaces invalid filename characters with .
	* added --with-libgeoip option to configure script to allow building and
	  linking against system wide library
	* fixed potential pure virtual function call in extensions on shutdown
	* fixed disk buffer leak in smart_ban extension

release 0.14.5

	* fixed bug when handling malformed webseed urls and an http proxy
	* fixed bug when setting unlimited upload or download rates for torrents
	* fix to make torrent_status::list_peers more accurate.
	* fixed memory leak in disk io thread when not using the cache
	* fixed bug in connect candidate counter
	* allow 0 upload slots
	* fixed bug in rename_file(). The new name would not always be saved in
	  the resume data
	* fixed resume data compatibility with 0.13
	* fixed rare piece-picker bug
	* fixed bug where one allowed-fast message would be sent even when
	  disabled
	* fixed race condition in UPnP which could lead to crash
	* fixed inversed seed_time ratio logic
	* added get_ip_filter() to session

release 0.14.4

	* connect candidate calculation fix